[project]
name = "journal_wrapped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "calplot>=0.1.7.5",
    "matplotlib>=3.10.8",
    "mlx-lm>=0.30.0",
    "pandas>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/journal_wrapped"]

[project.scripts]
jw = "journal_wrapped.cli:main"

[tool.pyright]
typeCheckingMode = "off"
